cluster/apps/default/paperless/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: default
spec:
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: paperless
